--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ coverage.xml
 *.py,cover
 .hypothesis/
 .pytest_cache/
+/virtualenv
 
 # Translations
 *.mo
@@ -131,4 +132,5 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+.vscode/settings.json
 .vscode/settings.json
